--- a/index.html
+++ b/index.html
@@ -83,7 +83,12 @@
   .suggest a{ display:flex; align-items:center; gap:.55rem; padding:.65rem .8rem; color:var(--ink); text-decoration:none; background:#0f231c; border-bottom:1px solid #1a4536; transition:all .15s ease }
   .suggest a:hover{ background:#133b2d; padding-inline-start:1rem }
 
-  #map{ height:62vh; border-radius:var(--radius); box-shadow:var(--shadow); position:relative; outline:1px solid var(--line) }
+  #map{
+    height:62vh; min-height:420px; /* keep visible even if vh bugs on mobile */
+    border-radius:var(--radius); box-shadow:var(--shadow); position:relative; outline:1px solid var(--line)
+  }
+  .leaflet-container{ background:#0d2018; } /* prevents “black void” look before tiles */
+
   #map .leaflet-control-zoom{ z-index:1005 } /* keep zoom clickable */
 
   .map-full{ position:fixed !important; inset:0 !important; width:100vw !important; height:100vh !important; z-index:1050 !important; border-radius:0 !important }
@@ -95,13 +100,11 @@
   }
   .float-btn:hover{ background:#123628; transform:scale(1.05) }
 
-  /* Exit fullscreen – fixed so it shows on mobile too */
-  .exit-fs{
-    position:fixed; top:12px; right:12px; z-index:20000; display:none;
-  }
+  /* Exit fullscreen – mobile friendly */
+  .exit-fs{ position:fixed; top:12px; right:12px; z-index:20000; display:none }
   .exit-fs.show{ display:block }
   @media (max-width:768px){
-    .exit-fs{ top:auto; bottom:16px; left:50%; right:auto; transform:translateX(-50%); }
+    .exit-fs{ top:auto; bottom:16px; left:50%; right:auto; transform:translateX(-50%) }
     .exit-fs .btn{ padding:.8rem 1.1rem; border-radius:999px }
   }
 
@@ -115,8 +118,7 @@
     filter: blur(1px); opacity:.9; animation:steam 2.6s ease-in-out infinite }
   .trail{ position:absolute; bottom:-6px; left:50%; width:16px; height:16px; transform:translateX(-50%); pointer-events:none;
     background: radial-gradient(closest-side, #59ffd4aa, transparent 70%); filter: blur(6px);
-    animation: trailPulse 1.8s ease-in-out infinite;
-  }
+    animation: trailPulse 1.8s ease-in-out infinite }
   @keyframes steam{ 0%{ transform:translateY(8px); opacity:.35 } 50%{ transform:translateY(-2px); opacity:1 } 100%{ transform:translateY(-10px); opacity:.35 } }
   @keyframes trailPulse{ 0%{ transform:translateX(-50%) scale(.7); opacity:.55 } 50%{ transform:translateX(-50%) scale(1.1); opacity:.9 } 100%{ transform:translateX(-50%) scale(.7); opacity:.55 } }
 
@@ -124,8 +126,8 @@
   .results::-webkit-scrollbar{ width:6px } .results::-webkit-scrollbar-thumb{ background-color:#1e4a3a; border-radius:3px }
   .card-cafe{ background:#0e231b; border:1px solid var(--line); border-radius:14px; transition:all .25s; overflow:hidden }
   .card-cafe:hover{ transform:translateY(-3px); box-shadow:0 12px 28px rgba(0,0,0,.35); border-color:var(--mint) }
-  .card-cafe .fw-bold{ color:var(--ink) } /* brighter name text */
-  .card-cafe .text-secondary{ color:var(--ink-dim) !important } /* brighten distances & meta */
+  .card-cafe .fw-bold{ color:var(--ink) }
+  .card-cafe .text-secondary{ color:var(--ink-dim) !important }
   .avatar{ width:52px; height:52px; border-radius:14px; background:#fff; border:1px solid #eaeaea; display:flex; align-items:center; justify-content:center; overflow:hidden; flex-shrink:0 }
   .avatar img{ width:100%; height:100%; object-fit:cover } .avatar .letter{ font-weight:900; color:#222 }
   .stars i{ color:#ffc34d } .chip{ background:#103c2f; border:1px solid var(--line); padding:.25rem .55rem; border-radius:999px; font-size:.85rem; display:inline-flex; align-items:center; gap:.25rem }
@@ -405,7 +407,7 @@
       }catch(e){} }; })()
   };
 
-  /* ------------ Parallax background ------------ */
+  /* Parallax */
   function parallax(x, y){
     const dx = (x - window.innerWidth/2)/window.innerWidth;
     const dy = (y - window.innerHeight/2)/window.innerHeight;
@@ -423,10 +425,13 @@
     bindEvents();
     // Start in KSA and show cafés near Riyadh
     state.map.setView(CFG.defaultView, CFG.defaultZoom);
+    setTimeout(()=>state.map.invalidateSize(), 100);   // <- ensure visible
     searchAt(24.7136, 46.6753, false, 12);
   }
 
   function initMap(){
+    if (!window.L) { utils.toast('Leaflet failed to load','error'); return; }
+
     state.map = L.map('map', { zoomControl:true, preferCanvas:true })
       .setView(CFG.defaultView, CFG.defaultZoom);
 
@@ -439,6 +444,9 @@
     });
     state.map.addLayer(state.cluster);
 
+    /* If the map container size changes, reflow tiles (fixes “blank map”). */
+    new ResizeObserver(() => { if (state.map) state.map.invalidateSize(); }).observe(dom.mapEl);
+
     // Controls
     dom.btnHere.addEventListener('click',()=>{ const c=state.map.getCenter(); searchAt(c.lat,c.lng,true); });
     dom.btnLoc.addEventListener('click', geolocate);
@@ -448,12 +456,11 @@
   }
 
   function bindEvents(){
-    // Click sound for most interactive elements
+    // Click sound
     document.addEventListener('click', (e)=>{
       if(e.target.closest('button, .btn, select, input[type=checkbox], a')) utils.clickSound();
     }, true);
 
-    // Home via cup icon
     dom.homeBtn.addEventListener('click', home);
 
     let timer=null;
@@ -490,24 +497,19 @@
   function applyLang(lang){
     state.lang = lang;
     const t = I18N[lang];
-    // dir + titles
     document.documentElement.lang = lang;
     document.documentElement.dir = (lang==='ar' ? 'rtl' : 'ltr');
     dom.brandText.textContent = t.brand;
     dom.query.placeholder = t.placeholder;
-    // simple static labels
     $$('[data-i18n]').forEach(el => { const key=el.getAttribute('data-i18n'); if(t[key]) el.textContent = t[key]; });
     dom.resTitle.textContent = t.results;
     dom.loadingTxt.textContent = t.searching;
     dom.noresTxt.textContent = t.none;
     dom.kpi.textContent = t.ready;
-    // tooltips/titles
     dom.btnFS.title = t.fullscreen; dom.btnHere.title = t.searchArea; dom.btnLoc.title = t.locate;
     dom.homeBtn.title = t.home;
     renderSortOptions();
-    // rerender to apply translated buttons/popups
     renderResults();
-    // input alignment
     dom.query.style.textAlign = (lang==='ar' ? 'right' : 'left');
   }
 
@@ -542,7 +544,7 @@
     url.searchParams.set('limit', '8');
     url.searchParams.set('lang', state.lang);
     url.searchParams.set('layer', 'city,town,village,locality');
-    url.searchParams.set('osm_tag', 'countrycode:' + CFG.country); // hard KSA filter
+    url.searchParams.set('osm_tag', 'countrycode:' + CFG.country);
     const r = await fetch(url, { signal }); const d = await r.json();
     return (d.features||[]).map(f=>{
       const p=f.properties||{}; const label=[p.name,p.city,p.state,p.country].filter(Boolean).join(', ');
@@ -576,7 +578,7 @@
     }catch(_){ utils.toast(state.lang==='ar'?'تعذر العثور على الموقع':'Could not find location','error'); }
   }
 
-  /* ------------ Search + Overpass (with cancel) ------------ */
+  /* ------------ Search + Overpass ------------ */
   function startLoading(){
     dom.loader.style.display='block'; dom.results.innerHTML=''; dom.nores.classList.add('d-none');
     dom.kpi.textContent=I18N[state.lang].searching; state.cluster.clearLayers(); state.markers=[];
@@ -769,13 +771,12 @@
 
   /* ------------ Home (cup icon) ------------ */
   function home(){
-    // reset filters
     dom.fOpen.checked=false; dom.fWifi.checked=false; dom.fOutdoor.checked=false;
     dom.minR.value=0; dom.minRVal.textContent='0.0';
     dom.sort.value='rating'; dom.radius.value='50000';
     dom.query.value=''; hideSuggest();
-    // go to KSA default then Riyadh search
     state.map.setView(CFG.defaultView, CFG.defaultZoom);
+    setTimeout(()=>state.map.invalidateSize(), 50);
     searchAt(24.7136, 46.6753, false, 12);
   }
 
